--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+.app-body {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
@@ -12,7 +12,7 @@ body {
   text-align: right;
 }
 
-.aaa img {
+.logo-image {
   width: 100%;
 }
 
@@ -42,7 +42,7 @@ body {
   display: flex;
 }
 
-ul {
+.tasks-block {
   margin: 0;
   padding: 0px;
 }
@@ -57,7 +57,7 @@ button{
   outline: none;
 }
 
-button {
+.task-item__button {
   background: none;
   border: 0px;
   color: #888;
@@ -67,13 +67,13 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.task-item__button:hover {
   color: #3a3a3a;
 }
 
 /* Heading */
 h3,
-label[for="new-task"] {
+.new-task__heading {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -83,7 +83,7 @@ label[for="new-task"] {
   text-transform: uppercase;
 }
 
-input[type="text"] {
+.task-item__input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -96,22 +96,22 @@ input[type="text"] {
   color: #888;
 }
 
-input[type="text"]:focus {
+.task-item__input:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.new-task__heading {
   display: block;
   margin: 0 0 20px;
 }
 
-input#new-task {
+#new-task {
   width: 318px;
 }
 
 /* Task list */
-li {
+.task-item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -120,51 +120,51 @@ li {
   align-items: center;
 }
 
-li > * {
+.task-item > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.task-item > input[type="checkbox"] {
   margin: 0 10px;
 }
 
-li > label {
+.task-item > .task-item__label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-li > input[type="text"] {
+.task-item > .task-item__input {
   width: 226px;
 }
 
-button.delete img {
+.delete .task-item__button-image_delete {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+.delete .task-item__button-image_delete:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+.tasks-block_completed .task-item__label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.tasks-block .task-item .task-item__input {
   display: none;
 }
 
-ul li.editMode input[type=text] {
+.tasks-block .task-item_edit-mode .task-item__input {
   display: inline-block;
   width: 224px;
 }
 
-ul li.editMode label {
+.tasks-block .task-item_edit-mode .task-item__label {
   display: none;
 }
